# CatWeb

./: .gitignore  Makefile  README.md  analysis_options.yaml  build_runner.cmd  l10n.cmd  l10n.yaml  proto.cmd  pubspec.yaml  结构图.drawio
android/: build.gradle
android/app/: build.gradle
cmd/: build_runner.cmd  l10n.cmd  proto.cmd
ios/: Podfile  pubspec.yaml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  get.dart  i18n.dart  main.dart  navigator.dart  themes.dart
lib/data/: constant.dart
lib/ffi/: ffi.dart  libgo.h
lib/l10n/: app_localizations.dart  app_localizations_zh.dart  app_zh.arb  app_zh.json5  app_zh.yaml  gen_arb.dart  gen_arb.py  json2arb.py  test.dart
lib/libs/: libgo.h
lib/test/: .gitignore  test_model.dart
lib/theme/: colors.dart  themes.dart
lib/utils/: array_utils.dart  concunnency.dart  context_helper.dart  debug.dart  delay_task.dart  dispose.dart  enum_helper.dart  handle.dart  helper.dart  hook_helper.dart  icons.dart  iter_helper.dart  lru_map.dart  rx_list.dart  (+11 more)
notebook/: 图片控制器设计.md
parser/: README.md  ffigen.yaml  pubspec.yaml
parser/src/: CMakeLists.txt  parser.c
test/: eh_sample.dart  favourite_parser.dart  ffi_request.json  ffi_test.dart  gallery_test.dart  image_loader_test.dart  image_selector.dart  list.htm  list_parser.json  parser_test.dart  queue_test.dart  selector_test.dart  test.dart  test.js  test_detail.dart  test_filter.dart  test_json_generate.dart  test_json_parse.dart  test_list_parser.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+493 files in other folders)
